--- a/front/src/components/LanguageSelector/LanguageSelector.scss
+++ b/front/src/components/LanguageSelector/LanguageSelector.scss
@@ -1,7 +1,7 @@
 .language-selector {
   display: flex;
   gap: 10px;    
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
 
   button {
     padding: 0px 8px;
