--- a/front/src/components/VideoSection/VideoSection.scss
+++ b/front/src/components/VideoSection/VideoSection.scss
@@ -27,6 +27,9 @@ h2{
   font-style: italic;
   font-size: 28px;
   color: black;
+  background-color: #ffffffb2;
+  border-radius: 15px;
+  padding: 10px;
 
 }
   video {
